tests/ui/using-for/overloads/ambiguous_library_member.stderr
error: member `pick` not unique on type `uint256`
   ╭▸ ROOT/tests/ui/using-for/overloads/ambiguous_library_member.sol:LL:CC
   │
LL │         x.pick(1);
   ╰╴          ━━━━

error: aborting due to 1 previous error

